# tower-oopsla22

./: .gitignore  LICENSE.md  Makefile  README.md  bench.out  bench.sh  tower  tower.dockerfile
src/: README.md  dune  lexer.mll  main.ml  parser.mly
src/lib/: args.ml  dune
src/lib/alloc/: alloc.ml  alloc.mli
src/lib/ast/: ast.ml  ast_.ml  ast_check.ml  ast_check.mli  ast_pp.ml
src/lib/check/: check.ml  check.mli
src/lib/circuit/: circuit.ml  circuit_.ml  circuit_gen.ml  circuit_gen.mli  circuit_pp.ml  circuit_sim.ml
src/lib/codegen/: codegen.ml  codegen.mli  prim_circuit.ml  prim_circuit_.ml  prim_pp.ml  prim_sim.ml  prim_sim.mli
src/lib/errors/: errors.ml  errors.mli
src/lib/interp/: interp.ml  interp.mli
src/lib/ir/: inline.ml  inline.mli  ir.ml  ir_.ml  ir_check.ml  ir_check.mli  ir_lower.ml  ir_lower.mli  ir_pp.ml  linear.ml
src/lib/lir/: lir.ml  lir_.ml  lir_lower.ml  lir_lower.mli  lir_pp.ml  lir_sim.ml
src/lib/lower/: ir_lower.ml  ir_lower.mli
src/lib/symbol/: symbol.ml  symbol.mli
src/test/: codegen_test.ml  dune  test.ml
tests/: contains.twr  contains_tests.twr  find_pos.twr  find_pos_tests.twr  hash_table.twr  hash_table_tests.twr  len.twr  len_inefficient.twr  length.twr  length_inefficient.twr  list.twr  queue.twr  queue_tests.twr  radix_tree.twr  radix_tree_tests.twr  remove.twr  remove_tests.twr  stack.twr  stack_len_tests.twr  string.twr  string_tests.twr  string_word.twr  string_word_tests.twr  sum.twr  sum_tests.twr  word.twr  word_tests.twr
